# mini-antsword

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: constent.js  hack.html  index.js  main.js  main.ts  reverseShell.html  reverseShell.js  styles.css  uploadBackdoor.js  uploadIndestructibleBackdoor.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: file_upload.rs  mod.rs  rce.rs
src-tauri/src/utils/: encode.rs  mod.rs  request.rs
src/modules/: file_upload.js  terminal.js  utils.js
