[package]
name = "mini-antsword-ts"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_urlencoded = "0.7"
url = "2.2"
rand = "0.8.5"
regex = "1.10.5"
md5 = "0.7.0"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
